Fix vertical spacing and h2 styling

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,8 +10,8 @@ h2 {
   text-align: center;
   font-size: 3rem;
   font-weight: 600;
-  margin-bottom: 2.5rem;
-  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+  margin-top: 6rem;
 }
 
 h3 {
